# vibebounty

./: .gitattributes  .gitignore  README.md  baseline.py  pyproject.toml  requirements-train.txt  requirements.txt  rubric.md  schema.json  synthesize.py  test_connectors.py  test_harness_local.py
_remote_snapshot/: debug_template.py  launch_gpu_train.sh  merge_lora.py  trace_gen.py  train_sft.py  verify_sft_data.py
app/: connectors.py  evidence.py  server.py  store.py  triage.py
configs/: bugbounty_lora.yaml
data/: build_sft.py  check_dist.py  codebase_symbols.txt  inspect_parquet.py  list_models.py  probe_anthropic.py  probe_api.py  rebuild_sft_from_jsonl.py  seed_examples.jsonl  select_trace_seed.py  trace_gen.py
docs/: REPO_STRUCTURE.md  app.js  e2e_local_emberglass.mjs  e2e_local_endpoint.mjs  e2e_local_webgpu.mjs  engine.mjs  engine.test.mjs  index.html  serve_mlc_local.py  smoke_emberglass_gate.mjs  styles.css
eval/: adversarial.py  report.json  report.md  report_viewer.html  run_eval.py
feeds/: __init__.py  enrich.py  fetch_feeds.py
mac_pull/: MODEL_CARD.md
ops/: dependency_catalog_local_windows_2026-06-23.txt  dependency_catalog_remote_linux_2026-06-23.txt  dependency_catalog_repo_declared_2026-06-23.txt  expected_assets_2026-06-23.md  highconf_sanitized_20260623_status.md  pilot_natural_trace_gate_probe.json  software_catalog_for_tune_2026-06-23.md  today_tune_preflight_2026-06-23.md  train_trace_seed_manifest.json
prompts/: synthesis_system.txt  triage_system.txt
remote/: bootstrap_mac.py  check_box.sh  com.bbverifier.mactunnel.plist  fuse.sh  (+46 more)
(+6 files in other folders)
